# etf-eda

./: .gitignore  README.md  eda_correlation.py  eda_returns.py  eda_volatility.py  etf_correlation_matrix.csv  etf_volatility.csv  requirements.txt
data/: etf_price_data.csv
docs/: EDA_NOTES.md  README.md
notebooks/: 01_modules.ipynb  02_modules.ipynb  03_module.ipynb  etf_da.ipynb  etf_individual_analysis.ipynb  modules-analysis.ipynb  portflio_backtest.ipynb  portflio_one_backtest.ipynb
processed/: etf_correlation_matrix.csv  etf_price_data.csv  etf_returns.csv  etf_summary_metrics.csv  etf_volatility.csv
research/ml_pipeline/: .gitignore  pyproject.toml
research/ml_pipeline/notebooks/: ETF_Feature_EDA.ipynb
research/ml_pipeline/src/: main.py
research/ml_pipeline/src/data_ingestion/: fetch_data.py
research/ml_pipeline/src/preprocessing/: preprocessing.py  runner.py
research/ml_pipeline/src/transformation/: runner.py
research/ml_pipeline/src/transformation/transformers/: base.py  ohlcv.py
scripts/: build_etf_summary_metrics.py  fetch_etf_data.py  fetch_raw_etf_data.py  test_eda.py
src/: eda.py
